fix overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
 }
 
 a {
@@ -153,7 +154,7 @@ main {
   position: absolute;
   top: 0;
   left: 0;
-  background: linear-gradient(rgb(218, 43, 43), #000);
+  background: linear-gradient(rgba(218, 43, 43, 0.8), #000);
   opacity: 0.8;
   width: 100%;
   height: 100%;
@@ -372,7 +373,7 @@ Funding Section styling
 
   .navigation {
     height: auto;
-    width: 100%;
+    max-width: 100%;
   }
 
   .white-nav-links {
@@ -469,6 +470,15 @@ Funding Section styling
 
   .cinchy4 {
     display: none;
+  }
+
+  .cinchy-anchor h2 {
+    padding: 0.6em 0 0 4em;
+  }
+
+  .cinchy-img {
+    top: 0.6em;
+    left: 0.6em;
   }
 
   .app-section {
